# bonndit

./: .gitignore  CMakeLists.txt  Watson_README.rst  Watson_README_test_data.rst  setup.py
scripts/: low-rank-k-approx  prob-tracking  watson-backup-to-data  watson-fitting  watson-fodf-sh-generation
src/bonndit/directions/: watsonfit.py
src/bonndit/tracking/: alignedDirection.pxd  alignedDirection.pyx  interpolation.pxd  interpolation.pyx  tracking_prob.pyx
src/bonndit/utilc/: Ceres_Cython.h  cython_helpers.pxd  cython_helpers.pyx  myext.cpp  myext.pxd  myext.pyx  watson_minimizer.pxd  watson_minimizer.pyx  watsonfit.h  watsonfitwrapper.cpp  watsonfitwrapper.pxd  watsonfitwrapper.pyx
src/bonndit/utils/: watson_fodf_generation.py  watson_utils.py
